@@ -1,0 +1,2 @@
+Invalid table columns : Partition column name ds conflicts with table columns.
+FAILED: Execution Error, return code 1 from org.apache.hadoop.hive.ql.exec.DDLTask
