@@ -211,3 +211,6 @@ Trunk (unreleased changes)
 
     HIVE-232. Metastore.warehouse configuration should use inherited 
     hadoop configuration (Prasad Chakka via dhruba)
+
+    HIVE-239. Check that replace columns in alter table does not have names
+    that are same as the partitioning columns (Prasad Chakka via athusoo)
